--- a/src/components/TimeLineExperience.astro
+++ b/src/components/TimeLineExperience.astro
@@ -1,5 +1,5 @@
 ---
-const { title, subtitle } = Astro.props;
+const { title, company, subtitle } = Astro.props;
 ---
 
 <div class="flex">
@@ -8,9 +8,9 @@ const { title, subtitle } = Astro.props;
     <span class="education__line bg-primary block h-full w-[2px] translate-x-[7px]"></span>
   </div>
   <div class="experience__data bd-grid px-5">
-    <h3 class="font-semibold mb-1">{title}</h3>
+      <h2 class="font-semibold mb-1">{title} <span class="text-blue-500"> @ </span> <span class="text-black">{company}</span></h2>
     <span class="font-light text-sm">{subtitle}</span>
-    <p class="my-2 text-justify">
+    <p class="my-2 text-justify mb-2">
       <slot />
     </p>
   </div>
