--- a/src/components/TimeLineEducation.astro
+++ b/src/components/TimeLineEducation.astro
@@ -4,12 +4,12 @@ const { title, years, school, gpa="" } = Astro.props;
 
 <div class="flex">
   <div class="education__time">
-    <span class="w-4 h-4 bg-primary block rounded-full mt-1"></span>
-    <span class="education__line bg-primary block h-full w-[2px] translate-x-[7px]"></span>
+    <span class="w-4 h-4 bg-secondary block rounded-full mt-1"></span>
+    <span class="education__line bg-secondary block h-full w-[2px] translate-x-[7px]"></span>
   </div>
-  <div class="experience__data bd-grid px-5">
+  <div class="bd-grid px-5">
       <h2 class="font-semibold mb-1">{title}</h2>
-    <span class="font-light text-sm">{years} @ <span class="font-bold">{school}</span></span>
+    <span class="font-light text-sm">{years} <span class="text-secondary"> @ </span> <span class="font-bold">{school}</span></span>
     {gpa && <p class="my-2 text-justify mb-2">
       GPA: {gpa}
     </p> }
