--- a/src/components/TimeLineExperience.astro
+++ b/src/components/TimeLineExperience.astro
@@ -1,5 +1,5 @@
 ---
-const { title, company, subtitle } = Astro.props;
+const { title, company, date, location } = Astro.props;
 ---
 
 <div class="flex">
@@ -7,11 +7,15 @@ const { title, company, subtitle } = Astro.props;
     <span class="w-4 h-4 bg-primary block rounded-full mt-1"></span>
     <span class="education__line bg-primary block h-full w-[2px] translate-x-[7px]"></span>
   </div>
-  <div class="experience__data bd-grid px-5">
-      <h2 class="font-semibold mb-1">{title} <span class="text-blue-500"> @ </span> <span class="text-black">{company}</span></h2>
-    <span class="font-light text-sm">{subtitle}</span>
-    <p class="my-2 text-justify mb-2">
+  <div class="px-5">
+      <h2 class="font-semibold mb-1 text-lg">{title} <span class="text-primary"> @ </span> <span>{company}</span></h2>
+    <div class="flex flex-col">
+      <span class="font-light text-sm">{date}</span>
+      <span class="font-light text-sm">{location}</span>
+    </div>
+    <p class="my-2 text-justify text-sm mb-2">
       <slot />
     </p>
+    <div class="p-4"></div>
   </div>
 </div>
