--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -2,12 +2,14 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 import TimeLineExperience from "../components/TimeLineExperience.astro";
 import TimeLineEducation from '@components/TimeLineEducation.astro';
+import Skills from '@components/Skills.astro';
 
 const experience = [
   {
     id: 0,
     company: "Gain Life",
     position: "Solutions Engineer",
+    location: "remote",
     date: "August 2023 - Present",
     description: ["abc", "abc"],
   },
@@ -84,26 +86,22 @@ const education = [
 
 <BaseLayout title="Resume" sideBarActiveItemID="resume">
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Profile</div>
+    <div class="text-4xl w-full font-bold">Skills</div>
   </div>
-
-  <div class="mb-10 text-justify">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-    cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-  </div>
+  <p class="mb-5">My skills, which I have either used professionally or extensively for personal/school projects. Hover to see more!</p>
+  <Skills />
 
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Experience</div>
+    <div class="text-4xl w-full font-bold">Experience</div>
   </div>
 
-  <div class="time-line-container mb-10">
+  <div class="timeline timeline-vertical mb-10">
     {experience.map(e => 
       <TimeLineExperience
         title={e.position}
         company={e.company}
-        subtitle={`${e.date}, ${e.location}`}
+        date={e.date}
+        location={e.location}
       >
       <ul>
         {e.description.map(d => <li class="list-disc">{d}</li>)}
@@ -113,10 +111,10 @@ const education = [
   </div>
 
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Education</div>
+    <div class="text-4xl w-full font-bold">Education</div>
   </div>
 
-  <div class="time-line-container grid gap-4 mb-10">
+  <div class="timeline timeline-vertical grid gap-4 mb-10">
     {education.map(e =>
       <TimeLineEducation
         title={e.degree}
@@ -126,27 +124,21 @@ const education = [
       />)}
   </div>
 
-  </ul>
-
-  <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Skills</div>
+  <div class="dropdown dropdown-hover dropdown-top">
+    <div tabindex="0" role="button" class="btn m-1">Relevant Engineering Courses</div>
+    <ul tabindex="0" class="dropdown-content z-[1] menu p-2 shadow bg-primary text-black rounded-box w-52">
+      <li><a class="hover:bg-accent">Algorithms</a></li>
+      <li><a class="hover:bg-accent">Software Development</a></li>
+      <li><a class="hover:bg-accent">Database Systems</a></li>
+      <li><a class="hover:bg-accent">Discrete Structures with Computer Applications</a></li>
+      <li><a class="hover:bg-accent">Linear Algebra with Computer Applications</a></li>
+      <li><a class="hover:bg-accent">Data Structures</a></li>
+      <li><a class="hover:bg-accent">Computer Systems</a></li>
+      <li><a class="hover:bg-accent">Principles of Programming Languages</a></li>
+      <li><a class="hover:bg-accent">Cyber Security</a></li>
+      <li><a class="hover:bg-accent">Dynamic Models of Biology</a></li>
+      <li><a class="hover:bg-accent">Calculus I & II</a></li>
+      <li><a class="hover:bg-accent">Computer Animation</a></li>
+    </ul>
   </div>
-
-  <ul class="list-disc md:columns-5 columns-2 mx-6">
-    <li>JavaScript</li>
-    <li>React.JS</li>
-    <li>Express.JS</li>
-    <li>Git</li>
-    <li>Python</li>
-    <li>C++</li>
-    <li>NextJS</li>
-    <li>C#</li>
-    <li>AWS</li>
-    <li>HTML</li>
-    <li>CSS</li>
-    <li>Linux</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-  </ul>
 </BaseLayout>
